--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  		 		<p class="header-subtitle">Верстка на HTML/CSS
         <br>Разработка сайтов под ключ</p>
         <div class="header-button-block">
-        	<button class="header-button">Связаться</button>
+        	<a href="https://vk.me/annabelousova_yola" class="header-button">Связаться</a>
         <small>Это бесплатно</small>
         </div>
  		 	</div>
@@ -82,19 +82,19 @@
  				<h4 class="footer-author">Анна Белоусова</h4>
  				<p class="footer-text">Разработка сайтов под ключ</p>
  			</div>
- 			<div class="col-md-44">
+ 			<div class="col-md-4">
  				<div class="social-block">
  					<p>Подпишитесь:</p>
- 					<a href="#"><img src="img/socials/facebook-logo-button.png" alt="Фейсбук"></a>
+ 					<a href="https://.facebook.com/profile.php?ref=bookmarks"><img src="img/socials/facebook-logo-button.png" alt="Фейсбук"></a>
  					<a href="#"><img src="img/socials/telegram-symbol.png" alt="Телеграмм"></a>
  					<a href="#"><img src="img/socials/vk-social-logotype.png" alt="вконтакте"></a>
- 					<a href="#"><img src="img/socials/youtube-symbol.png" alt="Ютуб"></a>
+ 					<a href="https://vk.com/annabelousova_yola"><img src="img/socials/youtube-symbol.png" alt="Ютуб"></a>
  				</div>
  			</div>
- 			<div class="col-4">
+ 			<div class="col-md-4">
  				<div class="footer-cta-block">
  					<p class="footer-cta">Напишите мне</p>
- 				<button class="footer-button">Написать</button>
+ 				<a href="https://vk.me/annabelousova_yola" class="footer-button">Написать</a>
  			</div>
  		</div>
  		<!-- /.row -->
